Use binding to update global state manager (#5325)